# autopub

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
autopub/: __init__.py  autopub.py  base.py  build_release.py  check_release.py  commit_release.py  config.py  create_github_release.py  deploy_release.py  exceptions.py  github_contributor.py  plugin_loader.py  prepare_release.py  publish_release.py  types.py
autopub/cli/: __init__.py  plugins.py
autopub/plugins/: __init__.py  bump_version.py  git.py  github.py  hookspec.py  pdm.py  poetry.py  spec.py  trigger.py  update_changelog.py  uv.py
docs/: conf.py  index.md
docs/configure/: index.md  settings.md
docs/develop/: contributing.md  index.md
docs/extend/: index.md
docs/extend/create/: index.md
docs/extend/plugins/: index.md
docs/release/: examples.md  index.md
tests/: conftest.py  test_autopub.py  test_build.py  test_check.py  test_load_plugins.py  test_prepare.py  test_publish.py  test_validate_config.py
tests/fixtures/: example_plugin.py  example_plugin_multiple_classes.py  example_plugin_with_all.py
tests/fixtures/example-project/: pyproject.toml
tests/fixtures/example-project-pdm/: pdm.toml  pyproject.toml
tests/fixtures/example-project-uv/: pyproject.toml
tests/plugins/: poetry.py  test_bump_version.py  test_git.py  test_github.py  test_pdm.py  test_poetry.py  test_update_changelog.py  test_uv.py
typings/frontmatter/: __init__.pyi  conftest.pyi  default_handlers.pyi  util.pyi
