[project]
requires-python = ">=3.9.0,<4.0"
version = "1.0.0-alpha.50"
name = "autopub"
description = "Automatic package release upon pull request merge"
authors = [
    { name = "Justin Mayer", email = "entroP@gmail.com" },
    { name = "Patrick Arminio", email = "patrick.arminio@gmail.com" },
]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["automatic", "packaging", "publish", "release", "version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "dunamai>=1.23.0",
    "pydantic>=2.10.5",
    "pygithub>=2.5.0",
    "python-frontmatter>=1.1.0",
    "rich>=13.9.4",
    "tomlkit>=0.13.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-httpserver>=1.1.0",
    "pytest-mock>=3.14.0",
    "time-machine>=2.16.0",
]

[project.scripts]
autopub = "autopub.cli:app"

[project.urls]
Source = "https://github.com/autopub/autopub"
Issues = "https://github.com/autopub/autopub/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["autopub"]

[tool.autopub]
project-name = "AutoPub"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.ruff]
select = ["I", "E", "F", "UP"]
ignore = ["E501"]
exclude = ["typings"]
force-exclude = true
